--- a/index.html
+++ b/index.html
@@ -835,7 +835,6 @@
 
     <!-- 引入农历库 -->
     <script src="https://cdn.jsdelivr.net/npm/lunar-calendar/dist/lunar.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lunar-javascript@1.6.12/lunar.min.js"></script>
 
     <script>
         // 数据存储
@@ -978,41 +977,37 @@
             return `${lunarMonthNames[lunarMonth]}月${lunarDayNames[lunarDay]}`;
         }
 
-/* ========== 节日自动计算开始 ========== */
-// 1. 公历固定节日
-const FIXED_HOLIDAYS = {
-  '01-01': '元旦', '02-14': '情人节', '03-08': '妇女节', '03-12': '植树节',
-  '04-01': '愚人节', '05-01': '劳动节', '06-01': '儿童节', '07-01': '建党节',
-  '08-01': '建军节', '09-10': '教师节', '10-01': '国庆节', '12-25': '圣诞节'
-};
+        // 节日节气数据
+        const holidays = {
+            '2025-01-01': { name: '元旦', type: 'holiday' },
+            '2025-01-20': { name: '大寒', type: 'solarterm' },
+            '2025-02-04': { name: '立春', type: 'solarterm' },
+            '2025-02-10': { name: '春节', type: 'holiday' },
+            '2025-03-05': { name: '惊蛰', type: 'solarterm' },
+            '2025-03-20': { name: '春分', type: 'solarterm' },
+            '2025-04-04': { name: '清明', type: 'holiday' },
+            '2025-04-20': { name: '谷雨', type: 'solarterm' },
+            '2025-05-01': { name: '劳动节', type: 'holiday' },
+            '2025-05-06': { name: '立夏', type: 'solarterm' },
+            '2025-05-21': { name: '小满', type: 'solarterm' },
+            '2025-06-10': { name: '端午节', type: 'holiday' },
+            '2025-06-21': { name: '夏至', type: 'solarterm' },
+            '2025-07-07': { name: '小暑', type: 'solarterm' },
+            '2025-07-23': { name: '大暑', type: 'solarterm' },
+            '2025-08-08': { name: '立秋', type: 'solarterm' },
+            '2025-08-23': { name: '处暑', type: 'solarterm' },
+            '2025-09-08': { name: '白露', type: 'solarterm' },
+            '2025-09-17': { name: '中秋节', type: 'holiday' },
+            '2025-09-23': { name: '秋分', type: 'solarterm' },
+            '2025-10-01': { name: '国庆节', type: 'holiday' },
+            '2025-10-08': { name: '寒露', type: 'solarterm' },
+            '2025-10-23': { name: '霜降', type: 'solarterm' },
+            '2025-11-07': { name: '立冬', type: 'solarterm' },
+            '2025-11-22': { name: '小雪', type: 'solarterm' },
+            '2025-12-07': { name: '大雪', type: 'solarterm' },
+            '2025-12-21': { name: '冬至', type: 'solarterm' }
+        };
 
-// 2. 引入 lunar-javascript（CDN 已带）
-// 生成全年节日/节气表
-function initHolidays(year) {
-  const map = new Map();
-  // 2-1 固定公历节日
-  for (const [md, name] of Object.entries(FIXED_HOLIDAYS)) {
-    map.set(`${year}-${md}`, { name, type: 'holiday' });
-  }
-  // 2-2 农历节日
-  ['春节','元宵节','端午节','中秋节','除夕']
-    .forEach((n, i) => {
-      const l = Lunar.fromYmd(year, [1,1,5,8,12][i], [1,15,5,15,30][i]);
-      const s = l.getSolar();
-      const k = `${s.getYear()}-${String(s.getMonth()).padStart(2,'0')}-${String(s.getDay()).padStart(2,'0')}`;
-      map.set(k, { name: n, type: 'holiday' });
-    });
-  // 2-3 二十四节气
-  const terms = ['小寒','大寒','立春','雨水','惊蛰','春分','清明','谷雨','立夏','小满','芒种','夏至','小暑','大暑','立秋','处暑','白露','秋分','寒露','霜降','立冬','小雪','大雪','冬至'];
-  for (let i = 0; i < 24; i++) {
-    const t = Solar.fromJulianDay(SolarTerms.fromIndex(year, i).getJulianDay());
-    const k = `${t.getYear()}-${String(t.getMonth()).padStart(2,'0')}-${String(t.getDay()).padStart(2,'0')}`;
-    map.set(k, { name: terms[i], type: 'solarterm' });
-  }
-  // 转回普通对象供原代码使用
-  holidays = Object.fromEntries(map);
-}
-/* ========== 节日自动计算结束 ========== */
         // 数据持久化
         function loadDiaryData() {
             const saved = localStorage.getItem('diaryData');
@@ -1444,7 +1439,6 @@ function initHolidays(year) {
 
         // 日历渲染
         function renderCalendar() {
-            initHolidays(currentDate.getFullYear());
             const year = currentDate.getFullYear();
             const month = currentDate.getMonth();
 
