--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
             '2025-08-08': { name: '立秋', type: 'solarterm' },
             '2025-08-23': { name: '处暑', type: 'solarterm' },
             '2025-09-08': { name: '白露', type: 'solarterm' },
-            '2025-09-17': { name: '中秋节', type: 'holiday' },
+            '2025-10-06': { name: '中秋节', type: 'holiday' },
             '2025-09-23': { name: '秋分', type: 'solarterm' },
             '2025-10-01': { name: '国庆节', type: 'holiday' },
             '2025-10-08': { name: '寒露', type: 'solarterm' },
@@ -1041,9 +1041,10 @@
         }
 
         function getDateInfo(date) {
-            const dateStr = date.toISOString().split('T')[0];
+            const dateStr = getDateKey(date);
             const lunarText = simpleLunarDay(date);
-            const holidayInfo = holidays[dateStr];
+            const holidayInfo = holidays[dateStr]; 
+            
             
             return {
                 lunar: lunarText,
